# mobius

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  openapi.yaml
.github/: setup-environments.py  setup-environments.sh
action/: fail.go  json.go  random.go  time.go
api/: client.gen.go  contract_test.go  oapi-codegen.yaml
docs/: retries.md  sdk-helpers.md
mobius/: action.go  action_invocations_test.go  action_response.go  action_response_test.go  actions_catalog.go  actions_catalog_test.go  agent_memory.go  agent_memory_test.go  agents.go  agents_test.go  artifacts.go  artifacts_test.go  automations.go  automations_test.go  client.go  context.go  context_test.go  discussions.go  discussions_test.go  doc.go  environment.go  environment_test.go  errors.go  hold.go  idempotency.go  instance.go  instance_test.go  loops.go  loops_test.go  org_actions.go  org_actions_test.go  organizations.go  (+34 more)
python/: README.md  pyproject.toml
python/deepnoodle/mobius/: __init__.py  _instance.py  action.py  action_response.py  client.py  errors.py  retry.py  signing.py  transcript.py  webhook.py  worker.py
python/deepnoodle/mobius/_api/: __init__.py  models.py
python/tests/: conftest.py  test_action_invocations.py  test_action_response.py  test_agent_memory.py  test_artifacts.py  test_contract.py  test_create_or_adopt.py  test_discussions.py  test_oauth_return_origins.py  test_org_actions.py  test_public_constants.py  test_retry.py  test_signing.py  test_skills.py  test_smoke.py  test_transcript.py  test_worker_events.py
(+202 files in other folders)
