[project]
name = "deepnoodle-mobius"
version = "0.0.1"
description = "Python SDK for Mobius workflow orchestration"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic[email]>=2.0",
]
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepnoodle"]

[tool.hatch.build.targets.sdist]
include = ["deepnoodle"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
